; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_axp20x_adc.c_axp20x_adc_scale_current.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_axp20x_adc.c_axp20x_adc_scale_current.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IIO_VAL_INT_PLUS_MICRO = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32*)* @axp20x_adc_scale_current to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @axp20x_adc_scale_current(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %21 [
    i32 131, label %9
    i32 128, label %13
    i32 129, label %17
    i32 130, label %17
  ]

9:                                                ; preds = %3
  %10 = load i32*, i32** %6, align 8
  store i32 0, i32* %10, align 4
  %11 = load i32*, i32** %7, align 8
  store i32 625000, i32* %11, align 4
  %12 = load i32, i32* @IIO_VAL_INT_PLUS_MICRO, align 4
  store i32 %12, i32* %4, align 4
  br label %24

13:                                               ; preds = %3
  %14 = load i32*, i32** %6, align 8
  store i32 0, i32* %14, align 4
  %15 = load i32*, i32** %7, align 8
  store i32 375000, i32* %15, align 4
  %16 = load i32, i32* @IIO_VAL_INT_PLUS_MICRO, align 4
  store i32 %16, i32* %4, align 4
  br label %24

17:                                               ; preds = %3, %3
  %18 = load i32*, i32** %6, align 8
  store i32 0, i32* %18, align 4
  %19 = load i32*, i32** %7, align 8
  store i32 500000, i32* %19, align 4
  %20 = load i32, i32* @IIO_VAL_INT_PLUS_MICRO, align 4
  store i32 %20, i32* %4, align 4
  br label %24

21:                                               ; preds = %3
  %22 = load i32, i32* @EINVAL, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %21, %17, %13, %9
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
